--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,7 @@ jobs:
     os: osx
     osx_image: xcode9
     script:
-    - bash -x -e .travis/python.release.sh
+    - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
     - echo bash -x -e .travis/wheel.test.sh
     after_success: bash -x -e .travis/after-success.sh
 
