--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,7 @@ jobs:
   - stage: build
     name: "Nightly Release Build on Linux"
     script:
-    - bash -x -e .travis/python.release.sh
+    - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
     after_success: bash -x -e .travis/after-success.sh
 
   - stage: build
@@ -74,7 +74,7 @@ jobs:
     osx_image: xcode9
     script:
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - echo bash -x -e .travis/wheel.test.sh
+    - bash -x -e .travis/wheel.test.sh
     after_success: bash -x -e .travis/after-success.sh
 
 notifications:
