--- a/tensorflow_io/json/BUILD
+++ b/tensorflow_io/json/BUILD
@@ -19,7 +19,9 @@ cc_library(
     ],
     linkstatic = True,
     deps = [
+        "//tensorflow_io/arrow:arrow_ops",
         "//tensorflow_io/core:dataset_ops",
+        "@arrow",
         "@jsoncpp_git//:jsoncpp",
     ],
 )
