Update inforamtion about building, testing and CI in README.md (#447)
* Update Dockerfile for dev

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update inforamtion about building, testing and CI in README.md

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tools/dev/Dockerfile
+++ b/tools/dev/Dockerfile
@@ -1,8 +1,12 @@
-FROM tensorflow/tensorflow:custom-op
+FROM ubuntu:16.04
 
 RUN apt-get update && \
     apt-get install -y \
     git \
+    gcc \
+    g++ \
+    make \
+    patch \
     curl \
     nano \
     unzip \
