Add tfio.IOTensor.from_lmdb with dict like key/value support (#450)
LMDB is a key/value storage which normally accessed through
indexing by key. The original LMDBDataset takes an iterable
approach which iterate through key/value pairs one by one.
While LMDBDataset works with some usage such as SUN dataset,
in case LMDB consists of unrelated keys this could be an issue.

This PR adds tfio.IOTensor.from_lmdb with dict like key/value support,
so that it is possible to access LMDB as:
```
value = lmb[key]
```

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/lmdb/BUILD
+++ b/tensorflow_io/lmdb/BUILD
@@ -11,6 +11,7 @@ cc_library(
     name = "lmdb_ops",
     srcs = [
         "kernels/lmdb_input.cc",
+        "kernels/lmdb_kernels.cc",
         "ops/lmdb_ops.cc",
     ],
     copts = tf_io_copts(),
