Add tfio.IOTensor.from_csv support (experimental with Apache Arrow's CSV parser) (#443)
* Add tfio.IOTensor.from_csv support (experimental with Apache Arrow's CSV parser)

CSV file is one of the most widely used format and in TensorFlow's
main repo there is already a CsvDataset which could be conviniently
used for iteration, either feed into tf.keras directly, or
access through a for loop.

There are, still some reasons to have a CSV input processor that
give indexing and slicing access. The most notable reason is that
while CSV file itself technically is only splittable (not truly indexable),
in reality especially in data science by default CSV file is almost
always loaded into memory. And because of its wide usage, it is really
more convenient and more flexible to have a CSV processor that
allows indexing and slicing.

This PR takes the indexing and slicing approach and built the parser
on top of Arrow. One advantage of Arrow is that Arrow's CSV's parser
options are closer to widely used pandas. This will allow easy usage
of importing csv files created by pandas.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Fix python 3 error

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/text/BUILD
+++ b/tensorflow_io/text/BUILD
@@ -10,6 +10,7 @@ load(
 cc_library(
     name = "text_ops",
     srcs = [
+        "kernels/csv_kernels.cc",
         "kernels/csv_output.cc",
         "kernels/text_kernels.cc",
         "kernels/text_output.cc",
@@ -23,6 +24,7 @@ cc_library(
     ],
     linkstatic = True,
     deps = [
+        "//tensorflow_io/arrow:arrow_ops",
         "//tensorflow_io/core:dataset_ops",
         "//tensorflow_io/core:output_ops",
         "//tensorflow_io/core:sequence_ops",
