--- a/tools/dev/Dockerfile
+++ b/tools/dev/Dockerfile
@@ -49,7 +49,7 @@ RUN /bin/bash -c "source activate tfio-dev && python -m pip install \
     pyarrow==${ARROW_VERSION} \
     pandas \
     fastavro \
-    gast==0.2.2
+    gast==0.2.2 \
     ${PIP_ADD_PACKAGES} \
     "
 
