--- a/tensorflow_io/prometheus/BUILD
+++ b/tensorflow_io/prometheus/BUILD
@@ -17,6 +17,6 @@ cc_library(
     linkstatic = True,
     deps = [
         "//tensorflow_io/core:dataset_ops",
-        "//tensorflow_io/core:prometheus_go_ops",
+        "//tensorflow_io/core:go_ops",
     ],
 )
