Add ffmpeg substream support (partial) (#494)
* Add ffmpeg substream support (partial)

This PR is part of the effort to support ffmpeg substream,
as specified in 453.

This PR is the first step to obtain the shape and dtype of the audio/video
substream in ffmpeg.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Avoid direct load ffmpeg_ops

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add processing of ffmpeg

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update FFmpegIOTensor so that elements could be AudioIOTensor

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Change component key to always use string

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/ffmpeg/BUILD
+++ b/tensorflow_io/ffmpeg/BUILD
@@ -13,6 +13,7 @@ cc_library(
         "kernels/audio_ffmpeg_input.cc",
         "kernels/audio_ffmpeg_reader.cc",
         "kernels/audio_ffmpeg_reader.h",
+        "kernels/ffmpeg_kernels.cc",
         "kernels/video_ffmpeg_input.cc",
         "kernels/video_ffmpeg_reader.cc",
         "kernels/video_ffmpeg_reader.h",
@@ -32,6 +33,7 @@ cc_library(
         "kernels/audio_ffmpeg_input.cc",
         "kernels/audio_ffmpeg_reader.cc",
         "kernels/audio_ffmpeg_reader.h",
+        "kernels/ffmpeg_kernels.cc",
         "kernels/video_ffmpeg_input.cc",
         "kernels/video_ffmpeg_reader.cc",
         "kernels/video_ffmpeg_reader.h",
