--- a/.travis.yml
+++ b/.travis.yml
@@ -83,7 +83,7 @@ jobs:
     osx_image: xcode9.3
     script:
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - echo bash -x -e .travis/wheel.test.sh
+    - bash -x -e .travis/wheel.test.sh
     after_success: bash -x -e .travis/after-success.sh
 
   - stage: build
