Add decode_tiff and decode_tiff_info (#504)
This PR adds native kernel ops of decode_tiff and decode_tiff_info
to replace the previous implementation of TIFFDataset.

The reasons to prefer native kernel ops for images are
1) Images are normally one item per file. Iteration does not make a lot of sense
2) Images fit into memory which means there is no need to "partially" load a slice like other data
   formats that may store huge data (e.g., Parquet).

Note tiff may have multiple frames with different shapes. This PR
introduce the `index` input to allow reading one frame at a time.

This PR also wraps TIFF into a TIFFIOTensor to allow easy access.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -158,6 +158,7 @@ cc_binary(
         "//tensorflow_io/genome:genome_ops",
         "//tensorflow_io/hdf5:hdf5_ops",
         "//tensorflow_io/ignite:ignite_ops",
+        "//tensorflow_io/image:image_ops",
         "//tensorflow_io/json:json_ops",
         "//tensorflow_io/kafka:kafka_ops",
         "//tensorflow_io/lmdb:lmdb_ops",
