--- a/tensorflow_io/image/BUILD
+++ b/tensorflow_io/image/BUILD
@@ -7,27 +7,28 @@ load(
     "tf_io_copts",
 )
 
-cc_binary(
-    name = "python/ops/_image_ops.so",
+cc_library(
+    name = "image_ops",
     srcs = [
         "kernels/font_opensans_regular.h",
         "kernels/gif_dataset_ops.cc",
         "kernels/image_kernels.cc",
+        "kernels/image_tiff_kernels.cc",
         "kernels/tiff_dataset_ops.cc",
         "kernels/webp_dataset_ops.cc",
         "ops/dataset_ops.cc",
+        "ops/image_ops.cc",
     ],
     copts = tf_io_copts(),
     includes = [
         ".",
     ],
-    linkshared = 1,
+    linkstatic = True,
     deps = [
+        "//tensorflow_io/core:dataset_ops",
         "@freetype",
         "@giflib",
         "@libtiff",
         "@libwebp",
-        "@local_config_tf//:libtensorflow_framework",
-        "@local_config_tf//:tf_header_lib",
     ],
 )
