Add decode_avro op to deserialize kafka message serialized with schem… (#512)
* Add decode_avro op to deserialize kafka message serialized with schema registry

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Work in Progress

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/kafka/BUILD
+++ b/tensorflow_io/kafka/BUILD
@@ -21,6 +21,7 @@ cc_library(
     deps = [
         "//tensorflow_io/core:dataset_ops",
         "//tensorflow_io/core:sequence_ops",
+        "@avro",
         "@kafka",
     ],
 )
