Adding end-to-end test for TF BigQuery connector (#524)
* Reverting change for optimizing BigQuery read by moving out GenericDatum initialization out of ReadRow

* updating grpc to 1.24

* adding end-to-end test for TF BigQuery connector

* Revert "updating grpc to 1.24"

This reverts commit d7737238a3498ff5cefbf71bdbe823b6c7c52990.
Upgrade breaks mac build.

* upgrading pip for MacOS build due to failure on python 3.x builds

* actually adding end-to-end bigquery reader test

* adding fastavro to the list of installed python packages before runing travis tests

* renaming tests/test_bigquery.py -> tests/test_bigquery_eager.py and using common pattern to enable eager mode

* moved Fake BigQuery server initialization to setUpClass so it is executed once per class, not per method

* making code python2 compartible

* added logging and changed channel creation a bit

* running test_bigquery_eager.py test separately from others because of https://github.com/grpc/grpc/issues/20034

--- a/tensorflow_io/bigquery/BUILD
+++ b/tensorflow_io/bigquery/BUILD
@@ -23,70 +23,23 @@ py_library(
     srcs_version = "PY2AND3",
 )
 
-KERNEL_FILES = [
-    "kernels/bigquery_kernels.cc",
-    "kernels/bigquery_dataset_op.cc",
-]
-
+# Have to put test op into prod binary because of https://github.com/grpc/grpc/issues/20034
+# Otherwise whenever 2 dynamically built libraries that are using grpc loaded
+# using _load_library, only first one will work.
 cc_binary(
     name = "python/ops/_bigquery.so",
-    srcs = KERNEL_FILES + [
+    srcs = [
+        "kernels/bigquery_dataset_op.cc",
+        "kernels/bigquery_kernels.cc",
+        "kernels/test_kernels/bigquery_test_client_op.cc",
         "ops/bigquery_ops.cc",
+        "ops/bigquery_test_ops.cc",
     ],
     copts = tf_io_copts(),
     linkshared = 1,
     deps = [
         ":bigquery_lib_cc",
         "@avro",
-        "@com_github_grpc_grpc//:grpc++",
-        "@com_google_googleapis//google/cloud/bigquery/storage/v1beta1:bigquerystorage_cc_grpc",
-        "@local_config_tf//:libtensorflow_framework",
-        "@local_config_tf//:tf_header_lib",
-    ],
-)
-
-cc_binary(
-    name = "python/kernel_tests/_bigquery_test.so",
-    srcs = [
-        "kernels/test_kernels/bigquery_test_client_op.cc",
-        "ops/bigquery_test_ops.cc",
-    ],
-    copts = tf_io_copts(),
-    linkshared = 1,
-    deps = [
-        ":bigquery_fake",
-        ":bigquery_lib_cc",
-        "@com_github_grpc_grpc//:grpc++",
-        "@com_google_googleapis//google/cloud/bigquery/storage/v1beta1:bigquerystorage_cc_grpc",
-        "@local_config_tf//:libtensorflow_framework",
-        "@local_config_tf//:tf_header_lib",
-    ],
-)
-
-cc_test(
-    name = "bigquery_fake_test",
-    srcs = ["kernels/test_kernels/bigquery_fake_test.cc"],
-    linkopts = select({
-        "@bazel_tools//src/conditions:darwin": [],
-        "//conditions:default": ["-lrt"],
-    }),
-    deps = [
-        ":bigquery_fake",
-        "@com_github_grpc_grpc//:grpc++",
-        "@com_google_googleapis//google/cloud/bigquery/storage/v1beta1:bigquerystorage_cc_grpc",
-        "@com_google_googletest//:gtest_main",
-        "@local_config_tf//:libtensorflow_framework",
-        "@local_config_tf//:tf_header_lib",
-    ],
-)
-
-cc_library(
-    name = "bigquery_fake",
-    srcs = ["kernels/test_kernels/fake_bigquery_storage_service.cc"],
-    hdrs = ["kernels/test_kernels/fake_bigquery_storage_service.h"],
-    copts = tf_io_copts(),
-    linkstatic = True,
-    deps = [
         "@com_github_grpc_grpc//:grpc++",
         "@com_google_googleapis//google/cloud/bigquery/storage/v1beta1:bigquerystorage_cc_grpc",
         "@local_config_tf//:libtensorflow_framework",
