--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -152,10 +152,13 @@ cc_binary(
         "//tensorflow_io/audio:audio_ops",
         "//tensorflow_io/avro:avro_ops",
         "//tensorflow_io/azure:azfs_ops",
+        "//tensorflow_io/bigquery:bigquery_ops",
         "//tensorflow_io/cifar:cifar_ops",
         "//tensorflow_io/core:core_ops",
         "//tensorflow_io/dicom:dicom_ops",
+        "//tensorflow_io/gcs:gcs_config_ops",
         "//tensorflow_io/genome:genome_ops",
+        "//tensorflow_io/grpc:grpc_ops",
         "//tensorflow_io/hdf5:hdf5_ops",
         "//tensorflow_io/ignite:ignite_ops",
         "//tensorflow_io/image:image_ops",
@@ -164,6 +167,7 @@ cc_binary(
         "//tensorflow_io/lmdb:lmdb_ops",
         "//tensorflow_io/mnist:mnist_ops",
         "//tensorflow_io/parquet:parquet_ops",
+        "//tensorflow_io/pubsub:pubsub_ops",
         "//tensorflow_io/text:text_ops",
         "@libarchive",
         "@local_config_tf//:libtensorflow_framework",
