Implicitly import azure/oss file systems (#543)
* Implicitly import azure file systems

This PR made several changes so that azure file system
could be implicitly registered as long as tensorflow_io is imported:
```
import tensorflow_io as tfio
```

This should help consolidate the API exposure.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Implicitly import oss file systems

This PR made several changes so that oss file system
could be implicitly registered as long as tensorflow_io is imported:
```
import tensorflow_io as tfio
```

This should help consolidate the API exposure.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -166,6 +166,7 @@ cc_binary(
         "//tensorflow_io/kafka:kafka_ops",
         "//tensorflow_io/lmdb:lmdb_ops",
         "//tensorflow_io/mnist:mnist_ops",
+        "//tensorflow_io/oss:oss_ops",
         "//tensorflow_io/parquet:parquet_ops",
         "//tensorflow_io/pubsub:pubsub_ops",
         "//tensorflow_io/text:text_ops",
