Add encode_bmp to tensorflow-io (#539)
* Add encode_bmp to tensorflow-io

This PR add encode_bmp to tensorflow-io. In tensorflow
decode_bmo is available but not encode_bmp, which was requested
in tensorflow/tensorflow/30172

This PR add encode_bmp to tensorflow-io

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Rebase and add prefix

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/image/BUILD
+++ b/tensorflow_io/image/BUILD
@@ -12,6 +12,7 @@ cc_library(
     srcs = [
         "kernels/font_opensans_regular.h",
         "kernels/gif_dataset_ops.cc",
+        "kernels/image_bmp_kernels.cc",
         "kernels/image_kernels.cc",
         "kernels/image_tiff_kernels.cc",
         "kernels/tiff_dataset_ops.cc",
