--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,7 @@ jobs:
     name: "Nightly Release Build on Linux"
     script:
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    after_success: echo bash -x -e .travis/after-success.sh
+    after_success: bash -x -e .travis/after-success.sh
 
   - stage: build
     name: "Nightly Release Build on macOS 2.7.13"
@@ -74,8 +74,8 @@ jobs:
     osx_image: xcode9.3
     script:
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - echo bash -x -e .travis/wheel.test.sh
-    after_success: echo bash -x -e .travis/after-success.sh
+    - bash -x -e .travis/wheel.test.sh
+    after_success: bash -x -e .travis/after-success.sh
 
   - stage: build
     name: "Nightly Release Build on macOS 3.5.3"
@@ -83,8 +83,8 @@ jobs:
     osx_image: xcode9.3
     script:
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - echo bash -x -e .travis/wheel.test.sh
-    after_success: echo bash -x -e .travis/after-success.sh
+    - bash -x -e .travis/wheel.test.sh
+    after_success: bash -x -e .travis/after-success.sh
 
   - stage: build
     name: "Nightly Release Build on macOS 3.6.2"
@@ -92,8 +92,8 @@ jobs:
     osx_image: xcode9.3
     script:
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - echo bash -x -e .travis/wheel.test.sh
-    after_success: echo bash -x -e .travis/after-success.sh
+    - bash -x -e .travis/wheel.test.sh
+    after_success: bash -x -e .travis/after-success.sh
 
 notifications:
 - email: false
