--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ before_install:
   set -x -e ;
   if [[ $(uname) == "Darwin" ]]; then
     export PYVER=$(echo $TRAVIS_JOB_NAME | awk '{print $NF}') ;
+    if [[ $PYVER == 3.7* ]]; then brew update; brew upgrade pyenv; fi ;
     echo pyenv install --list ;
     pyenv install $PYVER ;
     pyenv global $PYVER ;
@@ -65,7 +66,7 @@ jobs:
   - stage: build
     name: "Nightly Release Build on Linux"
     script:
-    - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
+    - echo bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
     after_success: bash -x -e .travis/after-success.sh
 
   - stage: build
@@ -73,8 +74,8 @@ jobs:
     os: osx
     osx_image: xcode9.3
     script:
-    - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - bash -x -e .travis/wheel.test.sh
+    - echo bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
+    - echo bash -x -e .travis/wheel.test.sh
     after_success: bash -x -e .travis/after-success.sh
 
   - stage: build
@@ -82,8 +83,8 @@ jobs:
     os: osx
     osx_image: xcode9.3
     script:
-    - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - bash -x -e .travis/wheel.test.sh
+    - echo bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
+    - echo bash -x -e .travis/wheel.test.sh
     after_success: bash -x -e .travis/after-success.sh
 
   - stage: build
@@ -91,8 +92,17 @@ jobs:
     os: osx
     osx_image: xcode9.3
     script:
+    - echo bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
+    - echo bash -x -e .travis/wheel.test.sh
+    after_success: bash -x -e .travis/after-success.sh
+
+  - stage: build
+    name: "Nightly Release Build on macOS 3.7.4"
+    os: osx
+    osx_image: xcode9.3
+    script:
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - bash -x -e .travis/wheel.test.sh
+    - echo bash -x -e .travis/wheel.test.sh
     after_success: bash -x -e .travis/after-success.sh
 
 notifications:
