--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,7 @@ jobs:
   - stage: build
     name: "Nightly Release Build on Linux"
     script:
-    - echo bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
+    - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
     after_success: bash -x -e .travis/after-success.sh
 
   - stage: build
@@ -74,8 +74,8 @@ jobs:
     os: osx
     osx_image: xcode9.3
     script:
-    - echo bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - echo bash -x -e .travis/wheel.test.sh
+    - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
+    - bash -x -e .travis/wheel.test.sh
     after_success: bash -x -e .travis/after-success.sh
 
   - stage: build
@@ -83,8 +83,8 @@ jobs:
     os: osx
     osx_image: xcode9.3
     script:
-    - echo bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - echo bash -x -e .travis/wheel.test.sh
+    - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
+    - bash -x -e .travis/wheel.test.sh
     after_success: bash -x -e .travis/after-success.sh
 
   - stage: build
@@ -92,17 +92,8 @@ jobs:
     os: osx
     osx_image: xcode9.3
     script:
-    - echo bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - echo bash -x -e .travis/wheel.test.sh
-    after_success: bash -x -e .travis/after-success.sh
-
-  - stage: build
-    name: "Nightly Release Build on macOS 3.7.4"
-    os: osx
-    osx_image: xcode9.3
-    script:
     - bash -x -e .travis/python.release.sh --nightly ${TRAVIS_BUILD_NUMBER}
-    - echo bash -x -e .travis/wheel.test.sh
+    - bash -x -e .travis/wheel.test.sh
     after_success: bash -x -e .travis/after-success.sh
 
 notifications:
