Move bigtable.so to libtensorflow_io.so (#588)
* Move bigtable.so to libtensorflow_io.so

This PR is part of the effort in resolving 489. In 489
there are several .so files that could not be imported by
python correctly. While continue to investigate the issue
it is worthwhile to combine multiple .so to libtensorflow_io.so
to avoid multiple copies of library anyway.

This PR merges bigtable.so to libtensorflow_io.so

Note since there is already a copy of GrpcStatusToTfStatus
this PR comment out the duplicated one.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Remove BUILD file from tensorflow_io/cloud

It looks like tensorflow_io/cloud is covered
by tensorflow_io/gcs, and tensorflow_io/bigquery. Also
tensorflow_io/cloud is not truly working as it depends on
ReaderBase which seems to be deprecated in tensorflow's core rep.

This PR removes BUILD file tensorflow_io/cloud so that
it will not be build and picked up by wheel package

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Pretty sure gcs_config_ops has been fully covered in tensorflow_io/gcs,

so remove the .cc file as well.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/bigtable/BUILD
+++ b/tensorflow_io/bigtable/BUILD
@@ -1,9 +1,7 @@
 # Cloud Bigtable client for TensorFlow
 licenses(["notice"])  # Apache 2.0
 
-package(
-    default_visibility = ["//tensorflow_io/cloud:__subpackages__"],
-)
+package(default_visibility = ["//visibility:public"])
 
 load(
     "//third_party/tf:tensorflow_io.bzl",
@@ -19,13 +17,13 @@ py_library(
         "python/ops/bigtable_api.py",
     ],
     data = [
-        ":python/ops/_bigtable.so",
+        "//tensorflow_io/core:python/ops/libtensorflow_io.so",
     ],
     srcs_version = "PY2AND3",
 )
 
-cc_binary(
-    name = "python/ops/_bigtable.so",
+cc_library(
+    name = "bigtable_ops",
     srcs = [
         "kernels/bigtable_kernels.cc",
         "kernels/bigtable_lookup_dataset_op.cc",
@@ -39,7 +37,7 @@ cc_binary(
         "ops/bigtable_ops.cc",
     ],
     copts = tf_io_copts(),
-    linkshared = 1,
+    linkstatic = True,
     deps = [
         ":bigtable_lib_cc",
         "@com_github_googleapis_google_cloud_cpp//google/cloud/bigtable:bigtable_client",
