Create v0 and experimental namespace for python (#603)
* Create v0 and experimental namespace for python

This PR is part of the effort to clean up the namespace
for python. Quite a few files have been changed but the only real
changes are:
1) Created a namespace of `tfio.experimental` for future usage
2) Created a namespace of `tfio.v0` to indicate the current release namespace
3) Alias all `tfio.v0` namespace to `tfio`, so that no end user impact.
   For example, tfio.IODataset.from_audio is an alias of tfio.v0.IODataset.from_audio
   and could be used concurrently.

This PR is part of the discussion in 553.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Fix several breaks

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Move prometheus to core to free up tfio.prometheus (use tfio.IODataset.from_prometheus instead)

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Move pcap to core to free up tfio.pcap (use tfio.IODataset.from_pcap instead)

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Fix issue

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Remap

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Move libsvm to tfio.experimental.text.decode_libsvm and tfio.experimental.IODataset.from_libsvm

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Fix version string

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update to remove unneeded prefix

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Fix typo in test

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/text/BUILD
+++ b/tensorflow_io/text/BUILD
@@ -12,10 +12,12 @@ cc_library(
     srcs = [
         "kernels/csv_kernels.cc",
         "kernels/csv_output.cc",
+        "kernels/libsvm_kernels.cc",
         "kernels/text_kernels.cc",
         "kernels/text_output.cc",
         "kernels/text_re2.cc",
         "kernels/text_sequence.cc",
+        "ops/libsvm_ops.cc",
         "ops/text_ops.cc",
     ],
     copts = tf_io_copts(),
