--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -134,6 +134,7 @@ cc_library(
     srcs = [
         "kernels/font_opensans_regular.h",
         "kernels/image_bmp_kernels.cc",
+        "kernels/image_jpeg_kernels.cc",
         "kernels/image_kernels.cc",
         "kernels/image_tiff_kernels.cc",
         "kernels/image_webp_kernels.cc",
@@ -143,6 +144,7 @@ cc_library(
     linkstatic = True,
     deps = [
         "//tensorflow_io/core:dataset_ops",
+        "@easyexif",
         "@freetype",
         "@giflib",
         "@libtiff",
