Follow up PR for Issue #552: Contribution guidelines as per TF structure (#589)
* Issue #552: Add naming conventions and prefixes in docs for development guide

* Issue #552: Move contribution guidelines to separate section.

* Issue #552: Minor modifications to text .

* Issue #552: Add contributing.md to doc as well .

* Issue #552: Add naming conventions and prefixes in docs for development guide

* Fix link for publishing

* Add a _toc.yaml to the top level docs directory

* Reverted tutorials/_toc.yaml

* Add link to tensorflow project code style guide.

--- a/docs/_toc.yaml
+++ b/docs/_toc.yaml
@@ -14,4 +14,5 @@
 #
 # ==============================================================================
 toc:
-# For example see: https://github.com/tensorflow/addons/blob/master/docs/tutorials/_toc.yaml
+- title: Overview
+  path: /io/overview
